--- a/src/main/resources/com/example/mobility_scv_maven/Page_main.fxml
+++ b/src/main/resources/com/example/mobility_scv_maven/Page_main.fxml
@@ -2,25 +2,28 @@
 
 <?import com.jfoenix.controls.*?>
 <?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="320.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mobility_scv_maven.Controller">
+<AnchorPane prefHeight="320.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mobility_scv_maven.MainController">
    <children>
       <BorderPane fx:id="pane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <bottom>
             <AnchorPane prefHeight="50.0" prefWidth="480.0" style="-fx-background-color: Gray;" BorderPane.alignment="CENTER">
                <children>
-                  <JFXButton layoutX="320.0" layoutY="5.0" mnemonicParsing="false" onMouseClicked="#click_graph" prefHeight="40.0" prefWidth="160.0" style="-fx-text-fill: Black;" text="Graph">
+                  <JFXButton fx:id="export_btn" layoutX="320.0" layoutY="5.0" mnemonicParsing="false" onMouseClicked="#click_Export" prefHeight="40.0" prefWidth="160.0" style="-fx-text-fill: Black;" text="Export">
                      <font>
                         <Font size="20.0" />
                      </font></JFXButton>
-                  <JFXButton layoutY="5.0" mnemonicParsing="false" onMouseClicked="#click_usr" prefHeight="40.0" prefWidth="160.0" style="-fx-text-fill: Black;" text="User">
+                  <JFXButton fx:id="str_btn" layoutY="5.0" mnemonicParsing="false" onMouseClicked="#click_start" prefHeight="40.0" prefWidth="160.0" style="-fx-text-fill: Black;" text="Start">
                      <font>
                         <Font size="20.0" />
                      </font></JFXButton>
-                  <JFXButton layoutX="160.0" layoutY="5.0" mnemonicParsing="false" onMouseClicked="#click_data" prefHeight="40.0" prefWidth="160.0" style="-fx-text-fill: Black;" text="Data">
+                  <JFXButton fx:id="stp_btn" layoutX="160.0" layoutY="5.0" mnemonicParsing="false" onMouseClicked="#click_stop" prefHeight="40.0" prefWidth="160.0" style="-fx-text-fill: Black;" text="Stop">
                      <font>
                         <Font size="20.0" />
                      </font></JFXButton>
@@ -33,29 +36,70 @@
                </children></AnchorPane>
          </bottom>
          <top>
-            <HBox alignment="TOP_CENTER" prefHeight="40.0" prefWidth="480.0" style="-fx-background-color: Gray;" BorderPane.alignment="CENTER">
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="480.0" style="-fx-background-color: Gray;" BorderPane.alignment="CENTER">
                <children>
-                  <Text fx:id="date" strokeType="OUTSIDE" strokeWidth="0.0" text="22 / JAN / 19" textAlignment="CENTER" textOrigin="TOP">
+                  <Label fx:id="lblDate" text="Label" textAlignment="CENTER">
                      <font>
                         <Font size="20.0" />
                      </font>
-                     <HBox.margin>
-                        <Insets left="10.0" right="20.0" top="9.0" />
-                     </HBox.margin>
-                  </Text>
-                  <Text fx:id="time" strokeType="OUTSIDE" strokeWidth="0.0" text="13 : 43" textAlignment="CENTER">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="20.0" top="9.0" />
-                     </HBox.margin>
-                  </Text>
+                  </Label>
                </children>
             </HBox>
          </top>
          <center>
-            <AnchorPane fx:id="pane_main" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+            <AnchorPane fx:id="pane_main" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <BorderPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <bottom>
+                        <HBox BorderPane.alignment="CENTER">
+                           <children>
+                              <Label text="Max Speed :">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets left="20.0" right="20.0" />
+                                 </HBox.margin>
+                              </Label>
+                              <Label fx:id="lblspeed" text="0.000">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets right="20.0" />
+                                 </HBox.margin>
+                              </Label>
+                              <Label text="Km/h">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                     </bottom>
+                     <center>
+                        <ScrollPane fx:id="scroll" fitToHeight="true" hbarPolicy="ALWAYS" maxWidth="1.7976931348623157E308" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
+                          <content>
+                            <AnchorPane>
+                                 <children>
+                                    <LineChart fx:id="LineChart" animated="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <xAxis>
+                                          <NumberAxis autoRanging="false" lowerBound="0" maxWidth="1.7976931348623157E308" tickLength="5.0" tickUnit="5" upperBound="30.0" fx:id="xAxis" />
+                                       </xAxis>
+                                       <yAxis>
+                                          <NumberAxis fx:id="yAxis" autoRanging="false" lowerBound="0" tickLength="5.0" tickUnit="5" upperBound="20" />
+                                       </yAxis>
+                                    </LineChart>
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                           <cursor>
+                              <Cursor fx:constant="NONE" />
+                           </cursor>
+                        </ScrollPane>
+                     </center>
+                  </BorderPane>
+               </children></AnchorPane>
          </center>
       </BorderPane>
    </children>
